{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 174,
  "lineage": "60953aa6-5319-90bd-1550-99eedd35e98b",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "linux_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1ed7ade3-5acc-4223-84b0-bb4a089308ec/resourceGroups/terraform-resources-rg/providers/Microsoft.Network/networkInterfaces/linux-vm-nic",
            "internal_domain_name_suffix": "3vub2wuwak0ehfqb3erkycy34h.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "linux-configuration",
                "primary": true,
                "private_ip_address": "10.1.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1ed7ade3-5acc-4223-84b0-bb4a089308ec/resourceGroups/terraform-resources-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet-rg/subnets/my-subnet1"
              }
            ],
            "location": "centralindia",
            "mac_address": "7C-1E-52-0E-D3-D0",
            "name": "linux-vm-nic",
            "private_ip_address": "10.1.0.4",
            "private_ip_addresses": [
              "10.1.0.4"
            ],
            "resource_group_name": "terraform-resources-rg",
            "virtual_machine_id": "/subscriptions/1ed7ade3-5acc-4223-84b0-bb4a089308ec/resourceGroups/terraform-resources-rg/providers/Microsoft.Compute/virtualMachines/terraform-linux-machine"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "windows_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1ed7ade3-5acc-4223-84b0-bb4a089308ec/resourceGroups/terraform-resources-rg/providers/Microsoft.Network/networkInterfaces/windows-vm-nic",
            "internal_domain_name_suffix": "3vub2wuwak0ehfqb3erkycy34h.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "windows-configuration",
                "primary": true,
                "private_ip_address": "10.1.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/1ed7ade3-5acc-4223-84b0-bb4a089308ec/resourceGroups/terraform-resources-rg/providers/Microsoft.Network/publicIPAddresses/public-ip",
                "subnet_id": "/subscriptions/1ed7ade3-5acc-4223-84b0-bb4a089308ec/resourceGroups/terraform-resources-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet-rg/subnets/my-subnet1"
              }
            ],
            "location": "centralindia",
            "mac_address": "60-45-BD-CE-AC-57",
            "name": "windows-vm-nic",
            "private_ip_address": "10.1.0.5",
            "private_ip_addresses": [
              "10.1.0.5"
            ],
            "resource_group_name": "terraform-resources-rg",
            "virtual_machine_id": "/subscriptions/1ed7ade3-5acc-4223-84b0-bb4a089308ec/resourceGroups/terraform-resources-rg/providers/Microsoft.Compute/virtualMachines/tf-win-vm"
          },
          "dependencies": [
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nic_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ed7ade3-5acc-4223-84b0-bb4a089308ec/resourceGroups/terraform-resources-rg/providers/Microsoft.Network/networkInterfaces/windows-vm-nic|/subscriptions/1ed7ade3-5acc-4223-84b0-bb4a089308ec/resourceGroups/terraform-resources-rg/providers/Microsoft.Network/networkSecurityGroups/SecurityGroup1",
            "network_interface_id": "/subscriptions/1ed7ade3-5acc-4223-84b0-bb4a089308ec/resourceGroups/terraform-resources-rg/providers/Microsoft.Network/networkInterfaces/windows-vm-nic",
            "network_security_group_id": "/subscriptions/1ed7ade3-5acc-4223-84b0-bb4a089308ec/resourceGroups/terraform-resources-rg/providers/Microsoft.Network/networkSecurityGroups/SecurityGroup1"
          },
          "dependencies": [
            "azurerm_network_interface.windows_nic",
            "azurerm_network_security_group.nsg",
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ed7ade3-5acc-4223-84b0-bb4a089308ec/resourceGroups/terraform-resources-rg/providers/Microsoft.Network/networkSecurityGroups/SecurityGroup1",
            "location": "centralindia",
            "name": "SecurityGroup1",
            "resource_group_name": "terraform-resources-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rdp-inbound",
                "priority": 130,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "https-inbound",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "https-outbound",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "in-rule-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/1ed7ade3-5acc-4223-84b0-bb4a089308ec/resourceGroups/terraform-resources-rg/providers/Microsoft.Network/networkSecurityGroups/SecurityGroup1/securityRules/https-inbound",
            "name": "https-inbound",
            "network_security_group_name": "SecurityGroup1",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "terraform-resources-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "in-rule-rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/1ed7ade3-5acc-4223-84b0-bb4a089308ec/resourceGroups/terraform-resources-rg/providers/Microsoft.Network/networkSecurityGroups/SecurityGroup1/securityRules/rdp-inbound",
            "name": "rdp-inbound",
            "network_security_group_name": "SecurityGroup1",
            "priority": 130,
            "protocol": "Tcp",
            "resource_group_name": "terraform-resources-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "out-rule-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/1ed7ade3-5acc-4223-84b0-bb4a089308ec/resourceGroups/terraform-resources-rg/providers/Microsoft.Network/networkSecurityGroups/SecurityGroup1/securityRules/https-outbound",
            "name": "https-outbound",
            "network_security_group_name": "SecurityGroup1",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "terraform-resources-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/1ed7ade3-5acc-4223-84b0-bb4a089308ec/resourceGroups/terraform-resources-rg/providers/Microsoft.Network/publicIPAddresses/public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "74.225.237.82",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "public-ip",
            "resource_group_name": "terraform-resources-rg",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.0.0/29",
            "address_prefixes": [
              "10.1.0.0/29"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1ed7ade3-5acc-4223-84b0-bb4a089308ec/resourceGroups/terraform-resources-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet-rg/subnets/my-subnet1",
            "name": "my-subnet1",
            "resource_group_name": "terraform-resources-rg",
            "virtual_network_name": "terraform-vnet-rg"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.0.8/29",
            "address_prefixes": [
              "10.1.0.8/29"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1ed7ade3-5acc-4223-84b0-bb4a089308ec/resourceGroups/terraform-resources-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet-rg/subnets/my-subnet2",
            "name": "my-subnet2",
            "resource_group_name": "terraform-resources-rg",
            "virtual_network_name": "terraform-vnet-rg"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1ed7ade3-5acc-4223-84b0-bb4a089308ec/resourceGroups/terraform-resources-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet-rg/subnets/my-subnet1",
            "network_security_group_id": "/subscriptions/1ed7ade3-5acc-4223-84b0-bb4a089308ec/resourceGroups/terraform-resources-rg/providers/Microsoft.Network/networkSecurityGroups/SecurityGroup1",
            "subnet_id": "/subscriptions/1ed7ade3-5acc-4223-84b0-bb4a089308ec/resourceGroups/terraform-resources-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet-rg/subnets/my-subnet1"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/28"
            ],
            "guid": "5a1e68ed-0296-43b4-9601-e922ac0b1df7",
            "id": "/subscriptions/1ed7ade3-5acc-4223-84b0-bb4a089308ec/resourceGroups/terraform-resources-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet-rg",
            "location": "centralindia",
            "name": "terraform-vnet-rg",
            "resource_group_name": "terraform-resources-rg",
            "subnet": [
              {
                "address_prefix": "10.1.0.0/29",
                "id": "/subscriptions/1ed7ade3-5acc-4223-84b0-bb4a089308ec/resourceGroups/terraform-resources-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet-rg/subnets/my-subnet1",
                "name": "my-subnet1",
                "security_group": "/subscriptions/1ed7ade3-5acc-4223-84b0-bb4a089308ec/resourceGroups/terraform-resources-rg/providers/Microsoft.Network/networkSecurityGroups/SecurityGroup1"
              },
              {
                "address_prefix": "10.1.0.8/29",
                "id": "/subscriptions/1ed7ade3-5acc-4223-84b0-bb4a089308ec/resourceGroups/terraform-resources-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet-rg/subnets/my-subnet2",
                "name": "my-subnet2"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}